--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "express-fileupload": "^1.5.2",
     "mysql2": "^3.15.3"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^25.0.3"
+  }
 }
