--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "type": "module",
   "devDependencies": {
-    "@types/node": "^25.0.3"
+    "@types/node": "^25.0.3",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
