--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   },
   "type": "module",
   "devDependencies": {
-    "@types/node": "^25.0.3"
+    "@types/node": "^25.0.3",
+    "express-to-postman": "^1.1.3",
+    "jest": "^30.2.0"
+  },
+  "scripts": {
+    "start": "node ./src/app.js",
+    "test": "npx jest",
+    "postman": "express-to-postman -i ./src/app.js -o ./collections/api.json"
   }
 }
