--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^25.0.3",
-    "express-to-postman": "^1.1.3",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "node-postman-generator": "^2.8.5"
   },
   "scripts": {
     "start": "node ./src/app.js",
     "test": "npx jest",
-    "postman": "express-to-postman -i ./src/app.js -o ./collections/api.json"
+    "postman": "npx node-postman-generator -i ./src/routes -o ./postman/api.json"
   }
 }
