--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "expo-crypto": "~15.0.7",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "jdenticon": "^3.3.0",
     "mysql2": "^3.15.3"
   },
   "type": "module",
